2009-12-03  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        [V8] Attributes and NamedNodeMaps aren't tracked correctly and may be prematurely garbage-collected.
        https://bugs.webkit.org/show_bug.cgi?id=32094

        Covered by existing test: LayoutTests/fast/dom/Attr/access-after-element-destruction.html

        * bindings/v8/DOMObjectsInclude.h:
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate):
        (WebCore::V8DOMWrapper::convertToV8Object):
        (WebCore::V8DOMWrapper::convertNamedNodeMapToV8Object):
        * bindings/v8/V8DOMWrapper.h:
        * bindings/v8/V8GCController.cpp:
        (WebCore::ObjectGrouperVisitor::visitDOMWrapper):
        * bindings/v8/custom/V8CustomBinding.h:

2009-12-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Chromium: Add support for settings containing ":"

        https://bugs.webkit.org/show_bug.cgi?id=32118

        * inspector/front-end/WatchExpressionsSidebarPane.js:
        (WebInspector.WatchExpressionsSection):

2009-12-03  Rafael Antognolli  <antognolli@profusion.mobi>, Kenneth Christiansen <kenneth@webkit.org>

        Reviewed by Simon Fraser.

        repaint events from outside the viewport aren't received
        https://bugs.webkit.org/show_bug.cgi?id=32081

        When using a tiled backing store for painting, you need to receive
        event from outside the viewport. Setting the viewport to the size
        of the contents is not an option if you want to make use of WebCore's
        infrastructure for drawing scrollbars etc.

        A new property, paintsEntireContents, has been introduced for the
        above use-case. It is settable, as tiling will be optional for Qt,
        and for the not yet upstreamed EFL port, there will be two different
        views, where only one of them are tiled.

        No change in behavior, so no new tests added.

        * page/FrameView.cpp: